--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 1,
    "id": "3023adb2",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 2,
    "id": "2aa0b43b",
    "metadata": {},
    "outputs": [
@@ -130,17 +130,29 @@
        "</div>"
       ],
       "text/plain": [
-       "          Date  GREEN LEAF (Kg)  ...  DIFFERENCE (Rs)  BOUGHT LEAF RATE (Rs)\n",
-       "0  30-Apr-1997           417935  ...            24.86                  20.76\n",
-       "1  31-May-1997           510033  ...            20.97                  21.70\n",
-       "2  30-Jun-1997           436533  ...            24.63                  23.10\n",
-       "3  31-Jul-1997           475422  ...            26.62                  22.70\n",
-       "4  31-Aug-1997           441680  ...            22.28                  23.50\n",
+       "          Date  GREEN LEAF (Kg)  MADE TEA (Kg)  NETT OUT TURN  \\\n",
+       "0  30-Apr-1997           417935        94143.0          22.53   \n",
+       "1  31-May-1997           510033       109461.0          21.46   \n",
+       "2  30-Jun-1997           436533        97275.0          22.28   \n",
+       "3  31-Jul-1997           475422        98949.0          20.81   \n",
+       "4  31-Aug-1997           441680        97419.0          22.06   \n",
        "\n",
-       "[5 rows x 8 columns]"
+       "   NETT SALE AVERAGE (Rs)  LOW GROWN AVERAGE (Rs)  DIFFERENCE (Rs)  \\\n",
+       "0                  145.17                  120.31            24.86   \n",
+       "1                  150.33                  129.36            20.97   \n",
+       "2                  160.32                  135.69            24.63   \n",
+       "3                  158.19                  131.57            26.62   \n",
+       "4                  161.18                  138.90            22.28   \n",
+       "\n",
+       "   BOUGHT LEAF RATE (Rs)  \n",
+       "0                  20.76  \n",
+       "1                  21.70  \n",
+       "2                  23.10  \n",
+       "3                  22.70  \n",
+       "4                  23.50  "
       ]
      },
-     "execution_count": 71,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 3,
    "id": "4cf5e9df",
    "metadata": {},
    "outputs": [
@@ -282,20 +294,28 @@
        "</div>"
       ],
       "text/plain": [
-       "       GREEN LEAF (Kg)  MADE TEA (Kg)  ...  DIFFERENCE (Rs)  BOUGHT LEAF RATE (Rs)\n",
-       "count       316.000000     316.000000  ...       316.000000             315.000000\n",
-       "mean     617772.202532  131543.454114  ...        64.670411              67.405111\n",
-       "std      124931.300808   24519.161723  ...        53.704538              49.662106\n",
-       "min      219222.000000   51224.000000  ...        14.570000              20.760000\n",
-       "25%      524681.500000  114618.375000  ...        30.412500              28.350000\n",
-       "50%      624874.500000  133316.500000  ...        50.285000              62.520000\n",
-       "75%      704669.250000  149862.500000  ...        76.792500              90.480000\n",
-       "max      874851.000000  187893.000000  ...       420.980000             302.250000\n",
+       "       GREEN LEAF (Kg)  MADE TEA (Kg)  NETT OUT TURN  NETT SALE AVERAGE (Rs)  \\\n",
+       "count       316.000000     316.000000     316.000000              316.000000   \n",
+       "mean     617772.202532  131543.454114      21.375538              481.917247   \n",
+       "std      124931.300808   24519.161723       0.784540              357.192608   \n",
+       "min      219222.000000   51224.000000      18.460000              145.170000   \n",
+       "25%      524681.500000  114618.375000      20.850000              204.255000   \n",
+       "50%      624874.500000  133316.500000      21.395000              445.945000   \n",
+       "75%      704669.250000  149862.500000      21.842500              653.697500   \n",
+       "max      874851.000000  187893.000000      23.730000             2184.430000   \n",
        "\n",
-       "[8 rows x 7 columns]"
+       "       LOW GROWN AVERAGE (Rs)  DIFFERENCE (Rs)  BOUGHT LEAF RATE (Rs)  \n",
+       "count              316.000000       316.000000             315.000000  \n",
+       "mean               417.246835        64.670411              67.405111  \n",
+       "std                308.193115        53.704538              49.662106  \n",
+       "min                106.480000        14.570000              20.760000  \n",
+       "25%                169.760000        30.412500              28.350000  \n",
+       "50%                382.870000        50.285000              62.520000  \n",
+       "75%                547.607500        76.792500              90.480000  \n",
+       "max               1763.450000       420.980000             302.250000  "
       ]
      },
-     "execution_count": 72,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 4,
    "id": "fc373bf4",
    "metadata": {},
    "outputs": [
@@ -316,7 +336,7 @@
        "(316, 8)"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 5,
    "id": "e82f53d8",
    "metadata": {},
    "outputs": [
@@ -340,7 +360,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 6,
    "id": "88c5c677",
    "metadata": {},
    "outputs": [
@@ -369,7 +389,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 7,
    "id": "6f6efd9d",
    "metadata": {},
    "outputs": [
@@ -398,7 +418,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 8,
    "id": "875f558b",
    "metadata": {},
    "outputs": [
@@ -427,7 +447,7 @@
        "(315, 8)"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 9,
    "id": "ae56d87d",
    "metadata": {},
    "outputs": [
@@ -541,18 +561,32 @@
        "</div>"
       ],
       "text/plain": [
-       "            GREEN LEAF (Kg)  ...  BOUGHT LEAF RATE (Rs)\n",
-       "Date                         ...                       \n",
-       "1997-04-30           417935  ...                  20.76\n",
-       "1997-05-31           510033  ...                  21.70\n",
-       "1997-06-30           436533  ...                  23.10\n",
-       "1997-07-31           475422  ...                  22.70\n",
-       "1997-08-31           441680  ...                  23.50\n",
+       "            GREEN LEAF (Kg)  MADE TEA (Kg)  NETT OUT TURN  \\\n",
+       "Date                                                        \n",
+       "1997-04-30           417935        94143.0          22.53   \n",
+       "1997-05-31           510033       109461.0          21.46   \n",
+       "1997-06-30           436533        97275.0          22.28   \n",
+       "1997-07-31           475422        98949.0          20.81   \n",
+       "1997-08-31           441680        97419.0          22.06   \n",
        "\n",
-       "[5 rows x 7 columns]"
+       "            NETT SALE AVERAGE (Rs)  LOW GROWN AVERAGE (Rs)  DIFFERENCE (Rs)  \\\n",
+       "Date                                                                          \n",
+       "1997-04-30                  145.17                  120.31            24.86   \n",
+       "1997-05-31                  150.33                  129.36            20.97   \n",
+       "1997-06-30                  160.32                  135.69            24.63   \n",
+       "1997-07-31                  158.19                  131.57            26.62   \n",
+       "1997-08-31                  161.18                  138.90            22.28   \n",
+       "\n",
+       "            BOUGHT LEAF RATE (Rs)  \n",
+       "Date                               \n",
+       "1997-04-30                  20.76  \n",
+       "1997-05-31                  21.70  \n",
+       "1997-06-30                  23.10  \n",
+       "1997-07-31                  22.70  \n",
+       "1997-08-31                  23.50  "
       ]
      },
-     "execution_count": 78,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 10,
    "id": "d653eeac",
    "metadata": {},
    "outputs": [
@@ -598,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 11,
    "id": "cebe76af",
    "metadata": {},
    "outputs": [
@@ -627,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 12,
    "id": "3e068094",
    "metadata": {},
    "outputs": [
@@ -655,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 13,
    "id": "27c89c9f",
    "metadata": {},
    "outputs": [
@@ -692,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 14,
    "id": "9b020ca7",
    "metadata": {},
    "outputs": [
@@ -737,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 15,
    "id": "41005875",
    "metadata": {},
    "outputs": [],
@@ -776,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 16,
    "id": "032b6048",
    "metadata": {},
    "outputs": [
@@ -821,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 17,
    "id": "1e504375",
    "metadata": {},
    "outputs": [
@@ -868,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 18,
    "id": "e4f31874",
    "metadata": {},
    "outputs": [],
@@ -892,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 19,
    "id": "f936abcf",
    "metadata": {},
    "outputs": [],
@@ -902,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 23,
    "id": "e80854d0",
    "metadata": {},
    "outputs": [
@@ -911,39 +945,44 @@
      "output_type": "stream",
      "text": [
       "Performing stepwise search to minimize aic\n",
-      " ARIMA(2,1,2)(1,0,1)[12] intercept   : AIC=2165.598, Time=2.32 sec\n",
-      " ARIMA(0,1,0)(0,0,0)[12] intercept   : AIC=2163.618, Time=0.03 sec\n",
-      " ARIMA(1,1,0)(1,0,0)[12] intercept   : AIC=2165.305, Time=0.50 sec\n",
-      " ARIMA(0,1,1)(0,0,1)[12] intercept   : AIC=2165.540, Time=0.54 sec\n",
-      " ARIMA(0,1,0)(0,0,0)[12]             : AIC=2165.708, Time=0.03 sec\n",
-      " ARIMA(0,1,0)(1,0,0)[12] intercept   : AIC=2165.162, Time=0.37 sec\n",
-      " ARIMA(0,1,0)(0,0,1)[12] intercept   : AIC=2165.078, Time=0.23 sec\n",
-      " ARIMA(0,1,0)(1,0,1)[12] intercept   : AIC=2166.559, Time=0.46 sec\n",
-      " ARIMA(1,1,0)(0,0,0)[12] intercept   : AIC=2163.802, Time=0.06 sec\n",
-      " ARIMA(0,1,1)(0,0,0)[12] intercept   : AIC=2164.102, Time=0.15 sec\n",
-      " ARIMA(1,1,1)(0,0,0)[12] intercept   : AIC=2165.252, Time=0.18 sec\n",
+      " ARIMA(2,1,2)(1,1,1)[12]             : AIC=inf, Time=1.22 sec\n",
+      " ARIMA(0,1,0)(0,1,0)[12]             : AIC=2216.911, Time=0.08 sec\n",
+      " ARIMA(1,1,0)(1,1,0)[12]             : AIC=2167.828, Time=0.23 sec\n",
+      " ARIMA(0,1,1)(0,1,1)[12]             : AIC=inf, Time=0.40 sec\n",
+      " ARIMA(1,1,0)(0,1,0)[12]             : AIC=2216.135, Time=0.09 sec\n",
+      " ARIMA(1,1,0)(2,1,0)[12]             : AIC=2139.119, Time=0.62 sec\n",
+      " ARIMA(1,1,0)(2,1,1)[12]             : AIC=inf, Time=1.30 sec\n",
+      " ARIMA(1,1,0)(1,1,1)[12]             : AIC=inf, Time=0.64 sec\n",
+      " ARIMA(0,1,0)(2,1,0)[12]             : AIC=2137.616, Time=0.37 sec\n",
+      " ARIMA(0,1,0)(1,1,0)[12]             : AIC=2168.904, Time=0.12 sec\n",
+      " ARIMA(0,1,0)(2,1,1)[12]             : AIC=inf, Time=1.85 sec\n",
+      " ARIMA(0,1,0)(1,1,1)[12]             : AIC=inf, Time=0.66 sec\n",
+      " ARIMA(0,1,1)(2,1,0)[12]             : AIC=2139.213, Time=0.44 sec\n",
+      " ARIMA(1,1,1)(2,1,0)[12]             : AIC=2140.642, Time=0.69 sec\n",
+      " ARIMA(0,1,0)(2,1,0)[12] intercept   : AIC=2139.417, Time=1.04 sec\n",
       "\n",
-      "Best model:  ARIMA(0,1,0)(0,0,0)[12] intercept\n",
-      "Total fit time: 4.912 seconds\n",
-      "                               SARIMAX Results                                \n",
-      "==============================================================================\n",
-      "Dep. Variable:                      y   No. Observations:                  252\n",
-      "Model:               SARIMAX(0, 1, 0)   Log Likelihood               -1079.809\n",
-      "Date:                Thu, 03 Jul 2025   AIC                           2163.618\n",
-      "Time:                        23:06:04   BIC                           2170.669\n",
-      "Sample:                    04-30-1997   HQIC                          2166.456\n",
-      "                         - 03-31-2018                                         \n",
-      "Covariance Type:                  opg                                         \n",
+      "Best model:  ARIMA(0,1,0)(2,1,0)[12]          \n",
+      "Total fit time: 9.776 seconds\n",
+      "                                     SARIMAX Results                                      \n",
+      "==========================================================================================\n",
+      "Dep. Variable:                                  y   No. Observations:                  252\n",
+      "Model:             SARIMAX(0, 1, 0)x(2, 1, 0, 12)   Log Likelihood               -1065.808\n",
+      "Date:                            Fri, 04 Jul 2025   AIC                           2137.616\n",
+      "Time:                                    22:13:15   BIC                           2148.045\n",
+      "Sample:                                04-30-1997   HQIC                          2141.819\n",
+      "                                     - 03-31-2018                                         \n",
+      "Covariance Type:                              opg                                         \n",
       "==============================================================================\n",
       "                 coef    std err          z      P>|z|      [0.025      0.975]\n",
       "------------------------------------------------------------------------------\n",
-      "intercept      2.2903      1.179      1.942      0.052      -0.021       4.602\n",
-      "sigma2       319.3157     15.235     20.960      0.000     289.456     349.175\n",
+      "ar.S.L12      -0.6057      0.047    -12.757      0.000      -0.699      -0.513\n",
+      "ar.S.L24      -0.3734      0.045     -8.385      0.000      -0.461      -0.286\n",
+      "sigma2       426.2899     22.683     18.794      0.000     381.833     470.747\n",
       "===================================================================================\n",
-      "Ljung-Box (L1) (Q):                   1.84   Jarque-Bera (JB):               361.98\n",
-      "Prob(Q):                              0.18   Prob(JB):                         0.00\n",
-      "Heteroskedasticity (H):               7.10   Skew:                             0.81\n",
-      "Prob(H) (two-sided):                  0.00   Kurtosis:                         8.66\n",
+      "Ljung-Box (L1) (Q):                   0.47   Jarque-Bera (JB):               186.31\n",
+      "Prob(Q):                              0.49   Prob(JB):                         0.00\n",
+      "Heteroskedasticity (H):               6.98   Skew:                             0.25\n",
+      "Prob(H) (two-sided):                  0.00   Kurtosis:                         7.30\n",
       "===================================================================================\n",
       "\n",
       "Warnings:\n",
@@ -958,6 +997,7 @@
     "                   test='adf',\n",
     "                   m = 12,\n",
     "                   d=1,\n",
+    "                   D=1,\n",
     "                   seasonal=True,\n",
     "                   stepwise=True,\n",
     "                   trace=True,\n",
