--- a/review.ipynb
+++ b/review.ipynb
@@ -15,26 +15,26 @@
     "\n",
     "Let’s break down the graph and relate it to real-world industry insights:\n",
     "\n",
-    "🔹 1. Overall Trends (1998–2023)\n",
+    "### 1. Overall Trends (1998–2023)\n",
     "Nett Sale Average and Low Grown Average show similar trends, closely moving together.\n",
     "\n",
     "Bought Leaf Rate is consistently much lower, as expected, since it’s the price paid to smallholders/farmers for green leaf—not for processed tea.\n",
     "\n",
-    "🔹 2. Early Years (~1998 to 2008)\n",
+    "### 2. Early Years (~1998 to 2008)\n",
     "Modest and relatively stable increases in prices.\n",
     "\n",
     "This reflects a period of moderate global tea demand, steady supply, and limited inflationary pressure.\n",
     "\n",
     "The civil war in Sri Lanka (ended in 2009) possibly affected infrastructure and logistics, contributing to slower industry growth.\n",
     "\n",
-    "🔹 3. 2009–2014: Post-war Growth & Global Commodity Boom\n",
+    "### 3. 2009–2014: Post-war Growth & Global Commodity Boom\n",
     "A noticeable upward trend post-2009: Reflects the post-war economic recovery.\n",
     "\n",
     "Increased investment in the plantation sector, improved logistics, and growing exports likely contributed.\n",
     "\n",
     "Global commodity prices were also rising during this time.\n",
     "\n",
-    "🔹 4. 2015–2019: Volatility, Policy Shifts, and Market Fluctuations\n",
+    "### 4. 2015–2019: Volatility, Policy Shifts, and Market Fluctuations\n",
     "Fluctuations in all three curves, with periodic peaks and drops.\n",
     "\n",
     "Factors:\n",
@@ -47,7 +47,7 @@
     "\n",
     "Currency depreciation—affected input costs and export earnings.\n",
     "\n",
-    "🔹 5. 2020–2022: COVID-19 Pandemic and Economic Crisis\n",
+    "### 5. 2020–2022: COVID-19 Pandemic and Economic Crisis\n",
     "Sharp surge in Nett Sale Average and Low Grown Average (~2021–2022), peaking in 2022.\n",
     "\n",
     "Likely reasons:\n",
@@ -58,7 +58,7 @@
     "\n",
     "Fertilizer import ban (2021) reduced yields, limiting supply and pushing prices up.\n",
     "\n",
-    "🔹 6. 2023 Onwards: Normalization and Decline\n",
+    "### 6. 2023 Onwards: Normalization and Decline\n",
     "After 2022 peak, prices drop sharply.\n",
     "\n",
     "This could be due to:\n",
@@ -71,7 +71,7 @@
     "\n",
     "Possible demand reduction due to global inflation and recession fears.\n",
     "\n",
-    "🔹 7. Bought Leaf Rate Dynamics\n",
+    "### 7. Bought Leaf Rate Dynamics\n",
     "Remains consistently low but lags behind sale averages.\n",
     "\n",
     "Notably, it also increased in 2022, but to a lesser extent.\n",
@@ -80,7 +80,7 @@
     "\n",
     "A major industry challenge: ensuring fair value transmission to producers.\n",
     "\n",
-    "📌 Key Takeaways:\n",
+    "### Key Notes:\n",
     "Market volatility in the Sri Lankan tea sector is heavily influenced by global demand, domestic policies, climate, and economic crises.\n",
     "\n",
     "The 2022 spike is an outlier, driven by local economic collapse and global supply shocks.\n",
