--- a/sales_and_valuation/sales_and_val.ipynb
+++ b/sales_and_valuation/sales_and_val.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 61,
    "id": "3d8aca1e",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 62,
    "id": "28dea3c8",
    "metadata": {},
    "outputs": [
@@ -186,7 +186,7 @@
        "4  1450.0   754000.0   759200       NaN         NaN  NaN      NaN  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 63,
    "id": "8aef4f6f",
    "metadata": {},
    "outputs": [],
@@ -214,7 +214,7 @@
     "    'DESPATCH DATE' : 'Despatch_Date',\n",
     "    'QTY' : 'Actual_Quantity',\n",
     "    'VALUE' : 'Actual_Price',\n",
-    "    'QTY.1' : 'Valuation_uantity',\n",
+    "    'QTY.1' : 'Valuation_Quantity',\n",
     "    'Vlu P' : 'Valuation_Price',\n",
     "    'Vlu pro' : 'Valuation_Proceeds',\n",
     "    'PROCEEDS' : 'Actual_Proceeds',\n",
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 64,
    "id": "911317cc",
    "metadata": {},
    "outputs": [
@@ -255,7 +255,7 @@
        "      <th>Grade</th>\n",
        "      <th>Actual_Quantity</th>\n",
        "      <th>Actual_Price</th>\n",
-       "      <th>Valuation_uantity</th>\n",
+       "      <th>Valuation_Quantity</th>\n",
        "      <th>Valuation_Price</th>\n",
        "      <th>Valuation_Proceeds</th>\n",
        "      <th>Actual_Proceeds</th>\n",
@@ -346,12 +346,12 @@
        "3      14.0    02.04.2024    OP             640        1460.0   \n",
        "4      14.0    02.04.2024   OPA             520        1460.0   \n",
        "\n",
-       "   Valuation_uantity  Valuation_Price  Valuation_Proceeds Actual_Proceeds  \\\n",
-       "0              350.0           3500.0           1225000.0         1260000   \n",
-       "1              680.0           2000.0           1360000.0         1326000   \n",
-       "2              640.0           1900.0           1216000.0         1152000   \n",
-       "3              640.0           1500.0            960000.0          934400   \n",
-       "4              520.0           1450.0            754000.0          759200   \n",
+       "   Valuation_Quantity  Valuation_Price  Valuation_Proceeds Actual_Proceeds  \\\n",
+       "0               350.0           3500.0           1225000.0         1260000   \n",
+       "1               680.0           2000.0           1360000.0         1326000   \n",
+       "2               640.0           1900.0           1216000.0         1152000   \n",
+       "3               640.0           1500.0            960000.0          934400   \n",
+       "4               520.0           1450.0            754000.0          759200   \n",
        "\n",
        "   Asking_Price  Asking_Proceeds  \n",
        "0           NaN              NaN  \n",
@@ -361,7 +361,7 @@
        "4           NaN              NaN  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 65,
    "id": "969b8e32",
    "metadata": {},
    "outputs": [
@@ -402,7 +402,7 @@
        "      <th>Grade</th>\n",
        "      <th>Actual_Quantity</th>\n",
        "      <th>Actual_Price</th>\n",
-       "      <th>Valuation_uantity</th>\n",
+       "      <th>Valuation_Quantity</th>\n",
        "      <th>Valuation_Price</th>\n",
        "      <th>Valuation_Proceeds</th>\n",
        "      <th>Actual_Proceeds</th>\n",
@@ -493,12 +493,12 @@
        "3      14.0    02.04.2024    OP             640        1460.0   \n",
        "4      14.0    02.04.2024   OPA             520        1460.0   \n",
        "\n",
-       "   Valuation_uantity  Valuation_Price  Valuation_Proceeds Actual_Proceeds  \\\n",
-       "0              350.0           3500.0           1225000.0         1260000   \n",
-       "1              680.0           2000.0           1360000.0         1326000   \n",
-       "2              640.0           1900.0           1216000.0         1152000   \n",
-       "3              640.0           1500.0            960000.0          934400   \n",
-       "4              520.0           1450.0            754000.0          759200   \n",
+       "   Valuation_Quantity  Valuation_Price  Valuation_Proceeds Actual_Proceeds  \\\n",
+       "0               350.0           3500.0           1225000.0         1260000   \n",
+       "1               680.0           2000.0           1360000.0         1326000   \n",
+       "2               640.0           1900.0           1216000.0         1152000   \n",
+       "3               640.0           1500.0            960000.0          934400   \n",
+       "4               520.0           1450.0            754000.0          759200   \n",
        "\n",
        "   Asking_Price  Asking_Proceeds  \n",
        "0           NaN              NaN  \n",
@@ -508,7 +508,7 @@
        "4           NaN              NaN  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 66,
    "id": "cb1316b8",
    "metadata": {},
    "outputs": [
@@ -538,7 +538,7 @@
        "(3362, 11)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 67,
    "id": "e4f5d216",
    "metadata": {},
    "outputs": [
@@ -557,12 +557,12 @@
      "data": {
       "text/plain": [
        "Index(['Sale_No.', 'Despatch_Date', 'Grade', 'Actual_Quantity', 'Actual_Price',\n",
-       "       'Valuation_uantity', 'Valuation_Price', 'Valuation_Proceeds',\n",
+       "       'Valuation_Quantity', 'Valuation_Price', 'Valuation_Proceeds',\n",
        "       'Actual_Proceeds', 'Asking_Price', 'Asking_Proceeds'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 68,
    "id": "729167d2",
    "metadata": {},
    "outputs": [
@@ -591,7 +591,7 @@
       " 2   Grade               3356 non-null   object \n",
       " 3   Actual_Quantity     3304 non-null   object \n",
       " 4   Actual_Price        3166 non-null   float64\n",
-      " 5   Valuation_uantity   3345 non-null   float64\n",
+      " 5   Valuation_Quantity  3345 non-null   float64\n",
       " 6   Valuation_Price     3347 non-null   float64\n",
       " 7   Valuation_Proceeds  3358 non-null   float64\n",
       " 8   Actual_Proceeds     3350 non-null   object \n",
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 69,
    "id": "869e3d69",
    "metadata": {},
    "outputs": [
@@ -635,7 +635,7 @@
        "      <th></th>\n",
        "      <th>Sale_No.</th>\n",
        "      <th>Actual_Price</th>\n",
-       "      <th>Valuation_uantity</th>\n",
+       "      <th>Valuation_Quantity</th>\n",
        "      <th>Valuation_Price</th>\n",
        "      <th>Valuation_Proceeds</th>\n",
        "      <th>Asking_Price</th>\n",
@@ -728,15 +728,15 @@
        "</div>"
       ],
       "text/plain": [
-       "          Sale_No.  Actual_Price  Valuation_uantity  Valuation_Price  \\\n",
-       "count  3362.000000   3166.000000        3345.000000      3347.000000   \n",
-       "mean     25.007436   1502.286797         736.414649      1439.563788   \n",
-       "std      12.823601    581.687648         371.562063       523.102672   \n",
-       "min       1.000000    730.000000          86.000000       730.000000   \n",
-       "25%      16.000000   1120.000000         500.000000      1100.000000   \n",
-       "50%      24.000000   1430.000000         640.000000      1400.000000   \n",
-       "75%      34.000000   1700.000000         920.000000      1650.000000   \n",
-       "max      51.000000   6150.000000        1840.000000      5000.000000   \n",
+       "          Sale_No.  Actual_Price  Valuation_Quantity  Valuation_Price  \\\n",
+       "count  3362.000000   3166.000000         3345.000000      3347.000000   \n",
+       "mean     25.007436   1502.286797          736.414649      1439.563788   \n",
+       "std      12.823601    581.687648          371.562063       523.102672   \n",
+       "min       1.000000    730.000000           86.000000       730.000000   \n",
+       "25%      16.000000   1120.000000          500.000000      1100.000000   \n",
+       "50%      24.000000   1430.000000          640.000000      1400.000000   \n",
+       "75%      34.000000   1700.000000          920.000000      1650.000000   \n",
+       "max      51.000000   6150.000000         1840.000000      5000.000000   \n",
        "\n",
        "       Valuation_Proceeds  Asking_Price  Asking_Proceeds  \n",
        "count        3.358000e+03   2682.000000     2.836000e+03  \n",
@@ -749,7 +749,7 @@
        "max          3.680000e+06   5500.000000     3.680000e+06  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 70,
    "id": "231b81e9",
    "metadata": {},
    "outputs": [
@@ -772,7 +772,7 @@
        "Grade                  35\n",
        "Actual_Quantity       115\n",
        "Actual_Price          155\n",
-       "Valuation_uantity     114\n",
+       "Valuation_Quantity    114\n",
        "Valuation_Price       146\n",
        "Valuation_Proceeds    866\n",
        "Actual_Proceeds       918\n",
@@ -781,7 +781,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 71,
    "id": "a2c6bac6",
    "metadata": {},
    "outputs": [
@@ -807,7 +807,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 72,
    "id": "6f590451",
    "metadata": {},
    "outputs": [
@@ -864,7 +864,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -872,6 +872,203 @@
    "source": [
     "dfw['Grade'].value_counts()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14e0a53f",
+   "metadata": {},
+   "source": [
+    "#### Data Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "88dca651",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sale_No.</th>\n",
+       "      <th>Despatch_Date</th>\n",
+       "      <th>Grade</th>\n",
+       "      <th>Actual_Quantity</th>\n",
+       "      <th>Actual_Price</th>\n",
+       "      <th>Valuation_Quantity</th>\n",
+       "      <th>Valuation_Price</th>\n",
+       "      <th>Valuation_Proceeds</th>\n",
+       "      <th>Actual_Proceeds</th>\n",
+       "      <th>Asking_Price</th>\n",
+       "      <th>Asking_Proceeds</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>14.0</td>\n",
+       "      <td>02.04.2024</td>\n",
+       "      <td>OP1</td>\n",
+       "      <td>350</td>\n",
+       "      <td>3600.0</td>\n",
+       "      <td>350.0</td>\n",
+       "      <td>3500.0</td>\n",
+       "      <td>1225000.0</td>\n",
+       "      <td>1260000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>14.0</td>\n",
+       "      <td>02.04.2024</td>\n",
+       "      <td>OP1</td>\n",
+       "      <td>680</td>\n",
+       "      <td>1950.0</td>\n",
+       "      <td>680.0</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>1360000.0</td>\n",
+       "      <td>1326000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>14.0</td>\n",
+       "      <td>02.04.2024</td>\n",
+       "      <td>OP1</td>\n",
+       "      <td>640</td>\n",
+       "      <td>1800.0</td>\n",
+       "      <td>640.0</td>\n",
+       "      <td>1900.0</td>\n",
+       "      <td>1216000.0</td>\n",
+       "      <td>1152000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>14.0</td>\n",
+       "      <td>02.04.2024</td>\n",
+       "      <td>OP</td>\n",
+       "      <td>640</td>\n",
+       "      <td>1460.0</td>\n",
+       "      <td>640.0</td>\n",
+       "      <td>1500.0</td>\n",
+       "      <td>960000.0</td>\n",
+       "      <td>934400</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>14.0</td>\n",
+       "      <td>02.04.2024</td>\n",
+       "      <td>OPA</td>\n",
+       "      <td>520</td>\n",
+       "      <td>1460.0</td>\n",
+       "      <td>520.0</td>\n",
+       "      <td>1450.0</td>\n",
+       "      <td>754000.0</td>\n",
+       "      <td>759200</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Sale_No. Despatch_Date Grade Actual_Quantity  Actual_Price  \\\n",
+       "0      14.0    02.04.2024   OP1             350        3600.0   \n",
+       "1      14.0    02.04.2024   OP1             680        1950.0   \n",
+       "2      14.0    02.04.2024   OP1             640        1800.0   \n",
+       "3      14.0    02.04.2024    OP             640        1460.0   \n",
+       "4      14.0    02.04.2024   OPA             520        1460.0   \n",
+       "\n",
+       "   Valuation_Quantity  Valuation_Price  Valuation_Proceeds Actual_Proceeds  \\\n",
+       "0               350.0           3500.0           1225000.0         1260000   \n",
+       "1               680.0           2000.0           1360000.0         1326000   \n",
+       "2               640.0           1900.0           1216000.0         1152000   \n",
+       "3               640.0           1500.0            960000.0          934400   \n",
+       "4               520.0           1450.0            754000.0          759200   \n",
+       "\n",
+       "   Asking_Price  Asking_Proceeds  \n",
+       "0           NaN              NaN  \n",
+       "1           NaN              NaN  \n",
+       "2           NaN              NaN  \n",
+       "3           NaN              NaN  \n",
+       "4           NaN              NaN  "
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfw.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "8836e561",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Sale_No.                0\n",
+       "Despatch_Date           0\n",
+       "Grade                   6\n",
+       "Actual_Quantity        58\n",
+       "Actual_Price          196\n",
+       "Valuation_Quantity     17\n",
+       "Valuation_Price        15\n",
+       "Valuation_Proceeds      4\n",
+       "Actual_Proceeds        12\n",
+       "Asking_Price          680\n",
+       "Asking_Proceeds       526\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# handling missing values\n",
+    "\n",
+    "dfw.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44662880",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
