--- a/sales_and_valuation/sales_and_val.ipynb
+++ b/sales_and_valuation/sales_and_val.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 240,
    "id": "3d8aca1e",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 241,
    "id": "28dea3c8",
    "metadata": {},
    "outputs": [
@@ -186,7 +186,7 @@
        "4  1450.0   754000.0   759200       NaN         NaN  NaN      NaN  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 241,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 242,
    "id": "8aef4f6f",
    "metadata": {},
    "outputs": [],
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 243,
    "id": "911317cc",
    "metadata": {},
    "outputs": [
@@ -361,7 +361,7 @@
        "4           NaN              NaN  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 243,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 244,
    "id": "969b8e32",
    "metadata": {},
    "outputs": [
@@ -508,7 +508,7 @@
        "4           NaN              NaN  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 244,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 245,
    "id": "cb1316b8",
    "metadata": {},
    "outputs": [
@@ -538,7 +538,7 @@
        "(3362, 11)"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 245,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 246,
    "id": "e4f5d216",
    "metadata": {},
    "outputs": [
@@ -562,7 +562,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 246,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 247,
    "id": "729167d2",
    "metadata": {},
    "outputs": [
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 248,
    "id": "869e3d69",
    "metadata": {},
    "outputs": [
@@ -749,7 +749,7 @@
        "max          3.680000e+06   5500.000000     3.680000e+06  "
       ]
      },
-     "execution_count": 69,
+     "execution_count": 248,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 249,
    "id": "231b81e9",
    "metadata": {},
    "outputs": [
@@ -781,7 +781,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 249,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 250,
    "id": "a2c6bac6",
    "metadata": {},
    "outputs": [
@@ -807,7 +807,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 250,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 251,
    "id": "6f590451",
    "metadata": {},
    "outputs": [
@@ -864,7 +864,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 251,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 252,
    "id": "88dca651",
    "metadata": {},
    "outputs": [
@@ -1019,7 +1019,7 @@
        "4           NaN              NaN  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 252,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1030,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 253,
    "id": "8836e561",
    "metadata": {},
    "outputs": [
@@ -1051,7 +1051,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 253,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1064,11 +1064,425 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 254,
    "id": "44662880",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sale_No.</th>\n",
+       "      <th>Despatch_Date</th>\n",
+       "      <th>Grade</th>\n",
+       "      <th>Actual_Quantity</th>\n",
+       "      <th>Actual_Price</th>\n",
+       "      <th>Valuation_Quantity</th>\n",
+       "      <th>Valuation_Price</th>\n",
+       "      <th>Valuation_Proceeds</th>\n",
+       "      <th>Actual_Proceeds</th>\n",
+       "      <th>Asking_Price</th>\n",
+       "      <th>Asking_Proceeds</th>\n",
+       "      <th>Actual_Quantity_numeric_only</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>14.0</td>\n",
+       "      <td>02.04.2024</td>\n",
+       "      <td>PEKOE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1360.0</td>\n",
+       "      <td>1360.0</td>\n",
+       "      <td>1849600.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>14.0</td>\n",
+       "      <td>02.04.2024</td>\n",
+       "      <td>PEKOE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>680.0</td>\n",
+       "      <td>1340.0</td>\n",
+       "      <td>911200.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>14.0</td>\n",
+       "      <td>02.04.2024</td>\n",
+       "      <td>PEKOE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1120.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>1120000.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>66</th>\n",
+       "      <td>15.0</td>\n",
+       "      <td>16.04.2024</td>\n",
+       "      <td>OPA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>880.0</td>\n",
+       "      <td>1260.0</td>\n",
+       "      <td>1108800.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73</th>\n",
+       "      <td>15.0</td>\n",
+       "      <td>16.04.2024</td>\n",
+       "      <td>FBOPFExSp</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>88.0</td>\n",
+       "      <td>2500.0</td>\n",
+       "      <td>220000.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3268</th>\n",
+       "      <td>30.0</td>\n",
+       "      <td>2025.08.04</td>\n",
+       "      <td>OP1</td>\n",
+       "      <td>Unsold</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1320.0</td>\n",
+       "      <td>1300.0</td>\n",
+       "      <td>1716000.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1400.0</td>\n",
+       "      <td>1848000.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3277</th>\n",
+       "      <td>30.0</td>\n",
+       "      <td>2025.08.04</td>\n",
+       "      <td>BOP1</td>\n",
+       "      <td>Unsold</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>760.0</td>\n",
+       "      <td>1550.0</td>\n",
+       "      <td>1178000.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1600.0</td>\n",
+       "      <td>1216000.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3300</th>\n",
+       "      <td>30.0</td>\n",
+       "      <td>2025.08.04</td>\n",
+       "      <td>OP1</td>\n",
+       "      <td>Unsold</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1200.0</td>\n",
+       "      <td>1150.0</td>\n",
+       "      <td>1380000.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1200.0</td>\n",
+       "      <td>1440000.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3317</th>\n",
+       "      <td>31.0</td>\n",
+       "      <td>2025.08.12</td>\n",
+       "      <td>OP1</td>\n",
+       "      <td>Unsold</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>340.0</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>680000.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2200.0</td>\n",
+       "      <td>748000.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3346</th>\n",
+       "      <td>31.0</td>\n",
+       "      <td>2025.08.12</td>\n",
+       "      <td>OP1</td>\n",
+       "      <td>Unsold</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1200.0</td>\n",
+       "      <td>1100.0</td>\n",
+       "      <td>1320000.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1200.0</td>\n",
+       "      <td>1440000.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>198 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Sale_No. Despatch_Date      Grade Actual_Quantity  Actual_Price  \\\n",
+       "8         14.0    02.04.2024      PEKOE             NaN           NaN   \n",
+       "9         14.0    02.04.2024      PEKOE             NaN           NaN   \n",
+       "30        14.0    02.04.2024      PEKOE             NaN           NaN   \n",
+       "66        15.0    16.04.2024        OPA             NaN           NaN   \n",
+       "73        15.0    16.04.2024  FBOPFExSp             NaN           NaN   \n",
+       "...        ...           ...        ...             ...           ...   \n",
+       "3268      30.0    2025.08.04        OP1          Unsold           NaN   \n",
+       "3277      30.0    2025.08.04       BOP1          Unsold           NaN   \n",
+       "3300      30.0    2025.08.04        OP1          Unsold           NaN   \n",
+       "3317      31.0    2025.08.12        OP1          Unsold           NaN   \n",
+       "3346      31.0    2025.08.12        OP1          Unsold           NaN   \n",
+       "\n",
+       "      Valuation_Quantity  Valuation_Price  Valuation_Proceeds Actual_Proceeds  \\\n",
+       "8                 1360.0           1360.0           1849600.0               0   \n",
+       "9                  680.0           1340.0            911200.0               0   \n",
+       "30                1120.0           1000.0           1120000.0               0   \n",
+       "66                 880.0           1260.0           1108800.0               0   \n",
+       "73                  88.0           2500.0            220000.0               0   \n",
+       "...                  ...              ...                 ...             ...   \n",
+       "3268              1320.0           1300.0           1716000.0               0   \n",
+       "3277               760.0           1550.0           1178000.0               0   \n",
+       "3300              1200.0           1150.0           1380000.0               0   \n",
+       "3317               340.0           2000.0            680000.0               0   \n",
+       "3346              1200.0           1100.0           1320000.0               0   \n",
+       "\n",
+       "      Asking_Price  Asking_Proceeds  Actual_Quantity_numeric_only  \n",
+       "8              NaN              NaN                           NaN  \n",
+       "9              NaN              NaN                           NaN  \n",
+       "30             NaN              NaN                           NaN  \n",
+       "66             NaN              NaN                           NaN  \n",
+       "73             NaN              NaN                           NaN  \n",
+       "...            ...              ...                           ...  \n",
+       "3268        1400.0        1848000.0                           NaN  \n",
+       "3277        1600.0        1216000.0                           NaN  \n",
+       "3300        1200.0        1440000.0                           NaN  \n",
+       "3317        2200.0         748000.0                           NaN  \n",
+       "3346        1200.0        1440000.0                           NaN  \n",
+       "\n",
+       "[198 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 254,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# comparing Actual quantity and Valuation Quantity\n",
+    "\n",
+    "# extracting numerical values only from the Actual quantity column\n",
+    "\n",
+    "dfw[\"Actual_Quantity_numeric_only\"] = dfw[\"Actual_Quantity\"].str.extract(r\"(\\d+\\.?\\d*)\") # Extract only numbers (integers or decimals)\n",
+    "dfw[\"Actual_Quantity_numeric_only\"] = pd.to_numeric(dfw[\"Actual_Quantity_numeric_only\"]) # Convert to numeric\n",
+    "\n",
+    "# comparison\n",
+    "\n",
+    "diff_mask = dfw[\"Actual_Quantity_numeric_only\"] != dfw[\"Valuation_Quantity\"]\n",
+    "differences = dfw[diff_mask]\n",
+    "\n",
+    "differences\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 255,
+   "id": "bab65a50",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Sale_No.                0\n",
+       "Despatch_Date           0\n",
+       "Grade                   6\n",
+       "Actual_Price          196\n",
+       "Valuation_Quantity     17\n",
+       "Valuation_Price        15\n",
+       "Valuation_Proceeds      4\n",
+       "Actual_Proceeds        12\n",
+       "Asking_Price          680\n",
+       "Asking_Proceeds       526\n",
+       "Actual_Quantity        17\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 255,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Replace NaN values in Actual_Quantity_numeric_only \n",
+    "# with corresponding values from Valuation_Quantity\n",
+    "\n",
+    "dfw[\"Actual_Quantity_numeric_only\"] = dfw[\"Actual_Quantity_numeric_only\"].fillna(dfw[\"Valuation_Quantity\"])\n",
+    "dfw = dfw.drop(['Actual_Quantity'],axis =1)\n",
+    "dfw = dfw.rename(columns = {\n",
+    "        \"Actual_Quantity_numeric_only\" : 'Actual_Quantity'\n",
+    "    })\n",
+    "\n",
+    "dfw.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 256,
+   "id": "ffd09cc9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3362 entries, 0 to 3361\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column              Non-Null Count  Dtype  \n",
+      "---  ------              --------------  -----  \n",
+      " 0   Sale_No.            3362 non-null   float64\n",
+      " 1   Despatch_Date       3362 non-null   object \n",
+      " 2   Grade               3356 non-null   object \n",
+      " 3   Actual_Price        3166 non-null   float64\n",
+      " 4   Valuation_Quantity  3345 non-null   float64\n",
+      " 5   Valuation_Price     3347 non-null   float64\n",
+      " 6   Valuation_Proceeds  3358 non-null   float64\n",
+      " 7   Actual_Proceeds     3164 non-null   float64\n",
+      " 8   Asking_Price        2682 non-null   float64\n",
+      " 9   Asking_Proceeds     2836 non-null   float64\n",
+      " 10  Actual_Quantity     3345 non-null   float64\n",
+      "dtypes: float64(9), object(2)\n",
+      "memory usage: 289.1+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Extract text from Actual_Proceeds \n",
+    "\n",
+    "dfw[\"Actual_Proceeds\"] = dfw[\"Actual_Price\"] * dfw[\"Actual_Quantity\"] \n",
+    "dfw.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 257,
+   "id": "b9a35240",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Sale_No.                0\n",
+       "Despatch_Date           0\n",
+       "Grade                   6\n",
+       "Actual_Price          196\n",
+       "Valuation_Quantity     17\n",
+       "Valuation_Price        15\n",
+       "Valuation_Proceeds      4\n",
+       "Actual_Proceeds       198\n",
+       "Asking_Price          680\n",
+       "Asking_Proceeds       526\n",
+       "Actual_Quantity        17\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 257,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfw.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 258,
+   "id": "72481bc1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Sale_No.                0\n",
+       "Despatch_Date           0\n",
+       "Grade                   6\n",
+       "Actual_Price          196\n",
+       "Valuation_Quantity     17\n",
+       "Valuation_Price        15\n",
+       "Valuation_Proceeds     17\n",
+       "Actual_Proceeds       198\n",
+       "Asking_Price          680\n",
+       "Asking_Proceeds       729\n",
+       "Actual_Quantity        17\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 258,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Replace 0 with NaN (null)\n",
+    "\n",
+    "dfw = dfw.replace(0, np.nan)\n",
+    "dfw.isnull().sum()"
+   ]
   }
  ],
  "metadata": {
