--- a/sales_and_valuation/sales_and_val.ipynb
+++ b/sales_and_valuation/sales_and_val.ipynb
@@ -2523,6 +2523,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 36,
+   "id": "ebcc0eac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "59965691.96721312"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_weekly['Actual_Proceeds'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 34,
    "id": "4d9410c6",
    "metadata": {},
